--- a/index.html
+++ b/index.html
@@ -3,91 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choisir un Site</title>
+    <title>Fake Bypass Link</title>
     <style>
-        /* Réinitialisation du style */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .container {
-            width: 80%;
-            max-width: 1200px;
+            background-color: #f4f4f9;
             text-align: center;
+            margin-top: 50px;
         }
-
-        input[type="text"] {
-            padding: 10px;
-            font-size: 18px;
-            border: 2px solid #444;
+        .message {
+            font-size: 20px;
+            color: #333;
+            padding: 20px;
+            background-color: #f9f9f9;
             border-radius: 5px;
-            background-color: #222;
-            color: #fff;
-            margin-bottom: 20px;
-            width: 100%;
-            max-width: 500px;
+            border: 1px solid #ccc;
         }
-
-        iframe {
-            width: 100%;
-            height: 70vh;
-            border: none;
-            border-radius: 10px;
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
-            transition: all 0.3s ease;
+        .redirect {
+            color: #1a73e8;
+            text-decoration: none;
+            font-weight: bold;
         }
-
-        iframe:hover {
-            transform: scale(1.05);
-        }
-
-        footer {
-            margin-top: 20px;
-            color: #ccc;
+        .redirect:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-
-    <div class="container">
-        <h1>Choisissez un site à afficher</h1>
-        <input type="text" id="siteInput" placeholder="Entrez l'URL du site (ex : https://www.mugiwara-no-streaming.com)">
-        <div>
-            <iframe id="iframe" src="" frameborder="0"></iframe>
-        </div>
+    <div class="message">
+        <p>Vous êtes redirigé vers un lien sécurisé...</p>
+        <a href="https://www.example.com" class="redirect">Cliquez ici pour continuer</a>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Choisir un Site - Tous droits réservés</p>
-    </footer>
-
     <script>
-        const siteInput = document.getElementById("siteInput");
-        const iframe = document.getElementById("iframe");
-
-        // Lorsqu'un utilisateur tape dans le champ de texte
-        siteInput.addEventListener("input", function() {
-            const url = siteInput.value;
-            // Vérifie si l'URL contient "http" pour éviter les erreurs de chargement
-            if (url.startsWith("http")) {
-                iframe.src = url;
-            }
-        });
+        // Simulation de la redirection automatique après un délai de 3 secondes
+        setTimeout(function() {
+            window.location.href = "https://www.example.com";
+        }, 3000); // Redirection après 3 secondes
     </script>
-
 </body>
 </html>
