--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <button class="btn" onclick="window.location.href='bypass.html'">Accéder à l'Outil Bypass</button>
 
     <footer>
-        <p>Rejoignez-nous sur <a href="https://bypass.vip/discord" target="_blank">Discord</a> pour plus d'infos.</p>
+        <p>Rejoignez-nous sur <a href="https://discord.gg/c24QBGCu3V" target="_blank">Discord</a> pour plus d'infos.</p>
     </footer>
 </body>
 </html>
