--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentation Bypass API</title>
+    <title>bypass link (bypass.vip)</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -113,7 +113,7 @@
     <button class="btn" onclick="window.location.href='bypass.html'">Accéder à l'Outil Bypass</button>
 
     <footer>
-        <p>Rejoignez-nous sur <a href="https://discord.gg/c24QBGCu3V" target="_blank">Discord</a> pour plus d'infos.</p>
+        <p>Official server<a href="https://bypass.vip/discord" target="_blank">Discord</a> for more information </p>
     </footer>
 </body>
 </html>
