--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <header>
         <h1>Bypass API Documentation</h1>
-        <p>Utilisez notre API pour contourner les liens protégés. Vous pouvez tester l'outil ou explorer notre documentation ici.</p>
+        <p>Utilisez l'API (bypass.vip) pour contourner les liens protégés. Vous pouvez tester l'outil ou explorer notre documentation ici.</p>
     </header>
 
     <h3>Réponses de l'API</h3>
