--- a/index.html
+++ b/index.html
@@ -3,117 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bypass link (bypass.vip)</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Vidéo en Arrière-Plan</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #4e73df, #1cc88a);
-            color: #fff;
+        /* Supprime les marges et définit la hauteur et largeur à 100% */
+        body, html {
+            height: 100%;
             margin: 0;
             padding: 0;
-            text-align: center;
+            overflow: hidden;
         }
-        header {
-            background-color: #333;
-            padding: 20px 0;
-        }
-        h1 {
-            font-size: 2.8em;
-            margin-bottom: 10px;
-            color: #ffcc00;
-        }
-        p, h3 {
-            font-size: 1.2em;
-            margin: 20px 0;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        ul li {
-            font-size: 1.1em;
-            margin: 10px 0;
-            padding-left: 15px;
-        }
-        ul li:before {
-            content: '✔';
-            color: #ffcc00;
-            padding-right: 10px;
-        }
-        .btn {
-            background-color: #ffcc00;
-            color: #333;
-            padding: 15px 30px;
-            font-size: 18px;
-            border-radius: 8px;
-            text-decoration: none;
-            text-transform: uppercase;
-            margin-top: 20px;
-            transition: 0.3s;
-        }
-        .btn:hover {
-            background-color: #fbc02d;
-            transform: scale(1.05);
-        }
-        footer {
-            background-color: #333;
-            padding: 15px;
-            color: #fff;
-        }
-        footer a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
+
+        /* Vidéo en arrière-plan */
+        video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Assure que la vidéo couvre tout l'écran */
+            z-index: -1; /* La vidéo est derrière le contenu (bien que nous n'ayons pas de contenu ici) */
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Bypass API Documentation</h1>
-        <p>Utilisez l'API (bypass.vip) pour contourner les liens protégés. Vous pouvez tester l'outil ou explorer notre documentation ici.</p>
-    </header>
 
-    <h3>Réponses de l'API</h3>
-    <h4>Réponse réussie :</h4>
-    <pre>
-{
-  "status": "success",
-  "result": "https://..." --> lien contourné
-}
-    </pre>
+    <!-- Vidéo en arrière-plan -->
+    <video autoplay loop muted>
+        <source src="https://video.twimg.com/tweet_video/GaKUqCxaAAA7i5r.mp4" type="video/mp4">
+    </video>
 
-    <h4>Réponse échouée :</h4>
-    <pre>
-{
-  "status": "error",
-  "message": "Erreur lors de l'appel API"
-}
-    </pre>
-
-    <h3>Sites Supportés</h3>
-    <ul>
-        <li>linkvertise.com (et autres domaines)</li>
-        <li>paster.so</li>
-        <li>Admaven (Lootlinks/lootlabs)</li>
-        <li>work.ink</li>
-        <li>boost.ink</li>
-        <li>mboost.me (bst.gg/booo.st)</li>
-        <li>socialwolvez.com</li>
-        <li>sub2get.com</li>
-        <li>social-unlock.com</li>
-        <li>sub2unlock.com</li>
-        <li>sub2unlock.net</li>
-        <li>rekonise.com</li>
-        <li>adfoc.us</li>
-        <li>URL shorteners (bit.ly, wc.wtf, v.gd, etc.)</li>
-    </ul>
-
-    <button class="btn" onclick="window.location.href='bypass.html'">Accéder à l'Outil Bypass</button>
-
-    <footer>
-        <p>Official server <a href="https://bypass.vip/discord" target="_blank">Discord</a> for more information </p>
-    </footer>
 </body>
 </html>
