--- a/index.html
+++ b/index.html
@@ -4,31 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vidéo en Arrière-Plan</title>
+    <title>Vidéo Améliorée avec Effets</title>
     <style>
-        /* Supprime les marges et définit la hauteur et largeur à 100% */
+        /* Style global pour enlever les marges et remplir la fenêtre */
         body, html {
             height: 100%;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow: hidden; /* Empêche le défilement */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000; /* Arrière-plan sombre pour améliorer la visibilité */
         }
 
-        /* Vidéo en arrière-plan */
+        /* Vidéo avec améliorations d'effets */
         video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Assure que la vidéo couvre tout l'écran */
-            z-index: -1; /* La vidéo est derrière le contenu (bien que nous n'ayons pas de contenu ici) */
+            width: 90%; /* Largeur de la vidéo */
+            height: auto;
+            object-fit: contain; /* Conserve le ratio de la vidéo */
+            border-radius: 15px; /* Bords arrondis pour un effet plus doux */
+            filter: brightness(80%) contrast(130%) saturate(150%) blur(1px); /* Amélioration de la luminosité, du contraste et saturation */
+            box-shadow: 0 0 25px rgba(0, 0, 0, 0.5); /* Ombre portée pour un effet de profondeur */
+            transition: transform 0.6s ease, filter 0.6s ease; /* Transition fluide sur les effets */
+        }
+
+        /* Effet au survol de la vidéo */
+        video:hover {
+            transform: scale(1.05); /* Zoom au survol */
+            filter: brightness(90%) contrast(150%) saturate(170%) blur(0px); /* Amélioration des effets lors du survol */
+        }
+
+        /* Animation d'entrée pour rendre l'apparition plus fluide */
+        video {
+            animation: fadeIn 1.5s ease-in-out; /* Animation d'apparition progressive */
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.95);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
     </style>
 </head>
 <body>
 
-    <!-- Vidéo en arrière-plan -->
+    <!-- Vidéo affichée sur la page avec effets -->
     <video autoplay loop muted>
         <source src="https://video.twimg.com/tweet_video/GaKUqCxaAAA7i5r.mp4" type="video/mp4">
     </video>
