--- a/index.html
+++ b/index.html
@@ -2,62 +2,52 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vidéo Améliorée avec Effets</title>
+    <title>Lecteur vidéo via iframe</title>
     <style>
-        /* Style global pour enlever les marges et remplir la fenêtre */
-        body, html {
-            height: 100%;
+        /* Styles de la page */
+        body {
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
             margin: 0;
-            padding: 0;
-            overflow: hidden; /* Empêche le défilement */
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #000; /* Arrière-plan sombre pour améliorer la visibilité */
+            height: 100vh;
+            overflow: hidden;
         }
 
-        /* Vidéo avec améliorations d'effets */
-        video {
-            width: 90%; /* Largeur de la vidéo */
-            height: auto;
-            object-fit: contain; /* Conserve le ratio de la vidéo */
-            border-radius: 15px; /* Bords arrondis pour un effet plus doux */
-            filter: brightness(80%) contrast(130%) saturate(150%) blur(1px); /* Amélioration de la luminosité, du contraste et saturation */
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.5); /* Ombre portée pour un effet de profondeur */
-            transition: transform 0.6s ease, filter 0.6s ease; /* Transition fluide sur les effets */
+        /* Conteneur principal de l'iframe */
+        .iframe-container {
+            width: 80%;
+            max-width: 900px;
+            aspect-ratio: 16/9;
+            border-radius: 20px;
+            box-shadow: 0 0 30px rgba(0, 255, 255, 0.5), inset 0 0 15px rgba(0, 255, 255, 0.3);
+            overflow: hidden;
+            animation: neon-border 2s infinite alternate;
         }
 
-        /* Effet au survol de la vidéo */
-        video:hover {
-            transform: scale(1.05); /* Zoom au survol */
-            filter: brightness(90%) contrast(150%) saturate(170%) blur(0px); /* Amélioration des effets lors du survol */
-        }
-
-        /* Animation d'entrée pour rendre l'apparition plus fluide */
-        video {
-            animation: fadeIn 1.5s ease-in-out; /* Animation d'apparition progressive */
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-                transform: scale(0.95);
+        /* Animation de la bordure de néon */
+        @keyframes neon-border {
+            from {
+                box-shadow: 0 0 30px rgba(0, 255, 255, 0.5), inset 0 0 15px rgba(0, 255, 255, 0.3);
             }
-            100% {
-                opacity: 1;
-                transform: scale(1);
+            to {
+                box-shadow: 0 0 50px rgba(0, 255, 255, 0.8), inset 0 0 25px rgba(0, 255, 255, 0.6);
             }
+        }
+
+        /* Styles de l'iframe */
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 20px;
         }
     </style>
 </head>
 <body>
-
-    <!-- Vidéo affichée sur la page avec effets -->
-    <video autoplay loop muted>
-        <source src="https://video.twimg.com/tweet_video/GaKUqCxaAAA7i5r.mp4" type="video/mp4">
-    </video>
-
+    <div class="iframe-container">
+        <iframe src="https://files.catbox.moe/n9qp1j.mp4" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
