--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Lecteur vidéo via iframe</title>
+    <title>Lecteur vidéo via iframe - Interface améliorée</title>
     <style>
         /* Styles de la page */
         body {
@@ -21,7 +21,7 @@
             max-width: 900px;
             aspect-ratio: 16/9;
             border-radius: 20px;
-            box-shadow: 0 0 30px rgba(0, 255, 255, 0.5), inset 0 0 15px rgba(0, 255, 255, 0.3);
+            box-shadow: 0 0 50px rgba(0, 255, 255, 0.6), inset 0 0 20px rgba(0, 255, 255, 0.4);
             overflow: hidden;
             animation: neon-border 2s infinite alternate;
         }
@@ -42,12 +42,57 @@
             height: 100%;
             border: none;
             border-radius: 20px;
+            transition: all 0.3s ease; /* Smooth hover effect */
+        }
+
+        iframe:hover {
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.8), inset 0 0 10px rgba(0, 255, 255, 0.4);
+        }
+
+        /* Effets de particules */
+        .particles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            overflow: hidden;
+        }
+
+        .particle {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background: rgba(0, 255, 255, 0.8);
+            border-radius: 50%;
+            animation: particle-move 5s linear infinite;
+        }
+
+        /* Animation des particules */
+        @keyframes particle-move {
+            from {
+                transform: translateY(100vh) translateX(0);
+                opacity: 1;
+            }
+            to {
+                transform: translateY(-10vh) translateX(50px);
+                opacity: 0;
+            }
         }
     </style>
 </head>
 <body>
     <div class="iframe-container">
         <iframe src="https://files.catbox.moe/n9qp1j.mp4" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <div class="particles">
+            <!-- Génération de particules -->
+            <div class="particle" style="left: 20%; animation-delay: 0s;"></div>
+            <div class="particle" style="left: 40%; animation-delay: 1s;"></div>
+            <div class="particle" style="left: 60%; animation-delay: 2s;"></div>
+            <div class="particle" style="left: 80%; animation-delay: 3s;"></div>
+            <div class="particle" style="left: 50%; animation-delay: 4s;"></div>
+        </div>
     </div>
 </body>
 </html>
