--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Lecteur vidéo via iframe - Interface améliorée</title>
+    <title>Lecteur vidéo via iframe - Interface améliorée avec Autoplay et boucle</title>
     <style>
         /* Styles de la page */
         body {
@@ -84,7 +84,7 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="https://files.catbox.moe/n9qp1j.mp4" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://files.catbox.moe/n9qp1j.mp4" frameborder="0" allow="autoplay; fullscreen; loop" allowfullscreen></iframe>
         <div class="particles">
             <!-- Génération de particules -->
             <div class="particle" style="left: 20%; animation-delay: 0s;"></div>
