--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             border: none;
             border-radius: 20px;
             transition: all 0.3s ease; /* Smooth hover effect */
+            allow="autoplay; fullscreen; loop";
         }
 
         iframe:hover {
